<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MapFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/sight_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="16dp"
        android:background="@drawable/map_sight_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        tools:text="@tools:sample/lorem" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/load_progress_bar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/button_current_location"
            style="@style/button_on_map"
            android:contentDescription="@string/current_location"
            android:src="@drawable/img_current_location"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/button_zoom_in"
            style="@style/button_on_map"
            android:contentDescription="@string/zoom_in"
            android:src="@drawable/img_zoom_in" />

        <ImageButton
            android:id="@+id/button_zoom_out"
            style="@style/button_on_map"
            android:contentDescription="@string/zoom_out"
            android:src="@drawable/img_zoom_out" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gps_denied"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:visibility="gone">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/why_need_geo_permissions"
            app:srcCompat="@drawable/img_map"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/why_need_geo_permissions"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/miss_permission_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miss_geo_permissions" />
    </LinearLayout>
</FrameLayout>